--- a/app/src/main/res/layout/demo5_layout.xml
+++ b/app/src/main/res/layout/demo5_layout.xml
@@ -1,40 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/coor"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:paddingTop="25dp">
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/mRecycleView"
+        android:id="@+id/recyclerview"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent" />
 
-    </android.support.v7.widget.RecyclerView>
-
-    <TextView
-        android:id="@+id/hide"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="#ffff"
-        android:visibility="gone" />
-
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/fab_margin_bottom"
-        android:layout_marginEnd="@dimen/fab_margin_right"
-        android:layout_marginRight="@dimen/fab_margin_right"
-        android:src="@mipmap/ic_launcher_round"
-        app:backgroundTint="#0767C8"
-        app:borderWidth="0dp"
-        app:elevation="6dp"
-        app:fabSize="normal"
-        app:layout_anchor="@id/mRecycleView"
-        app:layout_anchorGravity="bottom|right|end"
-        app:layout_behavior="@string/demo5_behavior3"
-        app:pressedTranslationZ="12dp"
-        app:rippleColor="#0767C8" />
-
-</android.support.design.widget.CoordinatorLayout>
+</LinearLayout>
